# policy-to-evidence-graph

./: .gitignore  DISCLAIMER.md  GOAL.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
control_libraries/: cisa_cpg_practical.yaml  hipaa_security_rule_practical.yaml  hph_cpg_essential.yaml  nist_csf_practical.yaml  small_practice_security_baseline.yaml
docs/: architecture.md  data-model.md  evidence-rules.md  graph-model.md  import-plans-existing-repos.md  privacy-and-storage-boundary.md  readiness-trends.md  sample-practice-walkthrough.md
examples/behavioral-health/: README.md
examples/consultant-client-review/: README.md
examples/dental/: README.md
examples/family-medicine/: README.md
schemas/: control.schema.json  evidence.schema.json  policy.schema.json  project.schema.json  review_snapshot.schema.json  risk.schema.json  system.schema.json  vendor.schema.json
src/evidence_graph/: __init__.py  cli.py  controls.py  dashboard.py  evidence.py  gaps.py  graph.py  ingest.py  models.py  normalize.py  reports.py  security.py  trends.py  validators.py
templates/: backup_restore_register.csv  control_library.yaml  evidence_reference_log.csv  incident_readiness_register.csv  policy_procedure_map.yaml  policy_register.csv  review_snapshot.yaml  risk_register.csv  system_inventory.csv  vendor_register.csv
tests/: test_controls.py  test_dashboard.py  test_integration.py  test_normalize.py  test_trends.py
web/: app.js  index.html
